# cisco-config-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
auditor/: __init__.py  configauditor.py
examples/: basic_offline.py  basic_online.py  config.txt
src/ciscoconfaudit/: __init__.py
