[project]
name = "ciscoconfaudit"
version = "0.1.2"
description = "A Cisco IOS & IOS-XE configuration audit tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8, <4"
license = { file = "LICENSE" }
keywords = ["cisco", "audit", "configuration audit"]
authors = [{ name = "Osama Abbas", email = "oabbas2512@gmail.com" }]
maintainers = [{ name = "Osama Abbas", email = "oabbas2512@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["ciscoconfparse", "rich"]

[project.optional-dependencies]
dev = ["pre-commit", "bumpver", "black", "isort"]

[project.urls]
Homepage = "https://github.com/Tes3awy/cisco-config-auditor/"
Repository = "https://github.com/Tes3awy/cisco-config-auditor/"
Issues = "https://github.com/Tes3awy/cisco-config-auditor/issues/"
"Say Thanks!" = "https://saythanks.io/to/Tes3awy"
Source = "https://github.com/Tes3awy/cisco-config-auditor/"
Changelog = "https://github.com/Tes3awy/cisco-config-auditor/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true
tag_message = "{new_version}"
tag_scope = "default"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/ciscoconfaudit/__init__.py" = ['^__version__ = "{version}"$']
